# antivirus

./: .gitignore  pyproject.toml
src/avml/: dataset.py  features.py  scan.py  train.py  utils.py
src/avml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
