[project]
name = "avml"
version = "0.1.0"
description = "Machine learning based malware risk classifier"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib",
  "pefile"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
